--- a/index.html
+++ b/index.html
@@ -8,7 +8,39 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="shortcut icon" href="image/icon/icon.png">
 </head>
-<body>
-    
+<body><!--Main-->
+    <section id="main">
+        <!--Navigation-->
+        <nav>
+            <!--Logo-->
+<a href="#"class="logo">
+    <img src="image/images.png">
+</a>
+<!--Menu-->
+<ul class="menu">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Skill</a></li>
+    <li><a href="#">Recent</a></li>
+    <li><a href="#">Contact</a></li>
+</ul>
+<!--Hello-->
+<a href="#" class="hey">Hello!</a>
+        </nav>
+        <!--content-->
+        <div class="content">
+            <!--Model-->
+            <div class="model">
+                <img src="image/model.png">
+            </div>
+            <!--main-text-->
+            <div class="main-text">
+            <h1>Hello, I am Ahmed Irfan</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                . Perspiciatis aliquid ex temporibus incidunt cumque maxime!
+            </p>
+            <a href="#" class="portfolio-btn">See My Portfolio</a>
+        </div>
+    </div>
+    </section>
 </body>
 </html>
